# ticket-editor

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/ticket-core/: Cargo.toml  README.md
crates/ticket-core/examples/: flow.rs  media.rs  print.rs  sale_receipt.rs  sample.rs
crates/ticket-core/src/: barcode.rs  data.rs  escpos.rs  expr.rs  font.rs  format.rs  image.rs  lib.rs  normalize.rs  qr.rs  render.rs  schema.rs
crates/ticket-core/tests/: normalize.rs  render.rs
crates/ticket-printable/: Cargo.toml  README.md
crates/ticket-printable-derive/: Cargo.toml
crates/ticket-printable-derive/src/: lib.rs
crates/ticket-printable/src/: lib.rs
crates/ticket-printable/tests/: derive.rs
crates/ticket-wasm/: Cargo.toml
crates/ticket-wasm/src/: lib.rs
docs/: webusb-linux-setup.md
scripts/: build-wasm.sh  set-version.sh
