[workspace]
resolver = "2"
members = ["crates/ticket-core", "crates/ticket-wasm"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rsansores/ticket-editor"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ab_glyph = "0.2"
png = "0.17"
qrcodegen = "1.8"

# Optimize the wasm build for size (applies to the whole workspace release build,
# which is what `build-wasm.sh` uses for the browser bundle).
[profile.release]
opt-level = "s"
lto = true
