[workspace]
resolver = "2"
members = [
    "crates/ticket-core",
    "crates/ticket-wasm",
    "crates/ticket-printable",
    "crates/ticket-printable-derive",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rsansores/ticket-editor"

[workspace.dependencies]
# Inter-crate dependency. crates.io strips `path`, so the `version` is what a
# published ticket-printable actually depends on — it MUST move in lockstep
# with [workspace.package].version. scripts/set-version.sh bumps both; don't
# edit either by hand. (A hard-coded "0.2" here is what broke the 0.3.0
# release: the bumped derive crate no longer satisfied the stale requirement.)
ticket-printable-derive = { path = "crates/ticket-printable-derive", version = "0.3.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ab_glyph = "0.2"
png = "0.18"
qrcodegen = "1.8"
barcoders = { version = "2", default-features = false }

# Optimize the wasm build for size (applies to the whole workspace release build,
# which is what `build-wasm.sh` uses for the browser bundle).
[profile.release]
opt-level = "s"
lto = true
