[package]
name = "ticket-core"
description = "Deterministic monospace-grid ticket renderer. The single source of truth shared by the backend (native) and the browser preview (wasm)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
homepage = "https://rsansores.github.io/ticket-editor/"
keywords = ["receipt", "thermal-printer", "ticket", "renderer", "escpos"]
categories = ["rendering", "wasm"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ab_glyph = { workspace = true }
png = { workspace = true }
qrcodegen = { workspace = true }
barcoders = { workspace = true }
base64 = "0.22"

[dev-dependencies]
png = { workspace = true }
base64 = "0.22"
