[package]
name = "ticket-core"
description = "Deterministic monospace-grid ticket renderer. The single source of truth shared by the backend (native) and the browser preview (wasm)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
homepage = "https://rsansores.github.io/ticket-editor/"
keywords = ["receipt", "thermal-printer", "ticket", "renderer", "escpos"]
categories = ["rendering", "wasm"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ab_glyph = { workspace = true }
png = { workspace = true }
qrcodegen = { workspace = true }
barcoders = { workspace = true }
base64 = "0.22"

[features]
# Embed the editor's extra monospace font families into the crate so a backend
# can render tickets that use them (via `Fonts::with_bundled()`) with the exact
# same bytes the browser preview uses. Off by default — a backend that only uses
# the built-in font pays nothing.
bundled-fonts = []

[dev-dependencies]
png = { workspace = true }
base64 = "0.22"
