[package]
name = "ticket-core"
description = "Deterministic monospace-grid ticket renderer. The single source of truth shared by the backend (native) and the browser preview (wasm)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
homepage = "https://rsansores.github.io/ticket-editor/"
keywords = ["receipt", "thermal-printer", "ticket", "renderer", "escpos"]
categories = ["rendering", "wasm"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ab_glyph = { workspace = true }
png = { workspace = true }
qrcodegen = { workspace = true }
barcoders = { workspace = true }
base64 = "0.22"
image = { workspace = true, optional = true }

[features]
# Embed the editor's extra monospace font families into the crate so a backend
# can render tickets that use them (via `Fonts::with_bundled()`) with the exact
# same bytes the browser preview uses. Off by default — a backend that only uses
# the built-in font pays nothing.
bundled-fonts = []
# `normalize_images()`: rewrite a document's embedded images as 1-bit PNGs at
# their exact target size, so it renders identically from far fewer bytes. Off by
# default — it pulls in `image` to decode JPEG/WebP sources, which a build that
# only renders (the wasm preview, an edge device) has no use for. PNG sources go
# through this crate's own decoder either way.
normalize = ["dep:image"]

[dev-dependencies]
png = { workspace = true }
base64 = "0.22"
# Only to build the JPEG/WebP fixtures the `normalize` tests feed in. The crate
# itself never encodes with it.
image = { workspace = true }
