[package]
name = "ticket-wasm"
description = "wasm-bindgen wrapper around ticket-core so the browser preview runs the exact same renderer as the backend."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ticket-core = { path = "../ticket-core" }
wasm-bindgen = "0.2"
