[package]
name = "ticket-wasm"
description = "wasm-bindgen wrapper around ticket-core so the browser preview runs the exact same renderer as the backend."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Build-only wrapper that produces the browser wasm bundle — never published to
# crates.io (consumers use the npm package, which embeds the built wasm).
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ticket-core = { path = "../ticket-core" }
wasm-bindgen = "0.2"
